# nemo-subtitle-generator

./: README.md  main.py  pyproject.toml
nemo_subtitle_generator/: __init__.py  cli.py  gui.py  transcriber.py
